configure nginx for backend app and add it with docker-compose.yml

--- a/Nginx/nginx.conf
+++ b/Nginx/nginx.conf
@@ -1,7 +1,10 @@
 events { worker_connections 1024; }
 
 http {
-    upstream springbootapp {
+    upstream localhost {
+        least_conn;
+        server localhost:1234;
+        server localhost:1234;
         server localhost:1234;
     }
 
