add Dockerfile and Nginx configurations including docker-compose.yml

--- a/Nginx/nginx.conf
+++ b/Nginx/nginx.conf
@@ -1,18 +1,18 @@
 events { worker_connections 1024; }
 
 http {
-    upstream localhost {
+    upstream springapp {
         least_conn;
-        server localhost:1234;
-        server localhost:1234;
-        server localhost:1234;
+        server service1:1234;
+        server service2:1234;
+        server service3:1234;
     }
 
     server {
-        listen 1235;
+        listen 1234;
 
         location / {
-            proxy_pass http://localhost:1234;
+            proxy_pass http://springapp;
         }
     }
 }
