--- a/springapp/Dockerfile
+++ b/springapp/Dockerfile
@@ -3,3 +3,4 @@ VOLUME /tmp
 ARG JAR_FILE=target/note-keeping-app.jar
 ADD ${JAR_FILE} note-keeping-app.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/note-keeping-app.jar"]
+EXPOSE 1234
