--- a/springapp/src/main/resources/application.properties
+++ b/springapp/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.mvc.view.suffix=.jsp
 server.port=1234
 spring.application.name=noteapp
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/noteapp
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://noteappdb.cimtucac5kjy.ap-south-1.rds.amazonaws.com:3306/noteappdb
+spring.datasource.username=anjali51
+spring.datasource.password=admin123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
